多言語対応化の漏れ修正

--- a/langs/ja.json
+++ b/langs/ja.json
@@ -94,6 +94,11 @@
             "id": "d6ea67a44b370d4f383cc8fefaba1980fd9b0fe3",
             "msg": "距離 %.1fブロック 開始地点を再度選択でキャンセル",
             "_desc": "経路設定画面 最大距離距離なし"
+        },
+        {
+            "id": "4113d1c0a79c0d1e5ec309771aeca9846ac72326",
+            "msg": "未設定",
+            "_desc": "ジップライン敷設時　持った時"
         }
     ]
 }
